LCCParser.py
# Generated from LCC.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LCCParser ( Parser ):

    grammarFileName = "LCC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'int'", "'float'", "'string'", 
                     "'break'", "'print'", "'read'", "'return'", "'if'", 
                     "'else'", "'for'", "'new'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "','", "';'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'NULL'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "DEF", "INT", "FLOAT", "STRING", "BREAK", 
                      "PRINT", "READ", "RETURN", "IF", "ELSE", "FOR", "NEW", 
                      "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", 
                      "OPEN_BRACK", "CLOSE_BRACK", "COMMA", "SEMI_COLON", 
                      "ASSIGN", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MOD", 
                      "NULL", "LESS_THAN", "GREATHER_THAN", "LESS_THAN_OR_EQUAL", 
                      "GREATHER_THAN_OR_EQUAL", "EQUALS", "DIFFERENT", "IDENT", 
                      "INT_CONSTANT", "FLOAT_CONSTANT", "STRING_CONSTANT", 
                      "WS" ]

    RULE_start = 0
    RULE_funclist = 1
    RULE_funcdef = 2
    RULE_paramlist = 3
    RULE_statement = 4
    RULE_vardecl = 5
    RULE_atribstat = 6
    RULE_funccall = 7
    RULE_paramlistcall = 8
    RULE_printstat = 9
    RULE_readstat = 10
    RULE_returnstat = 11
    RULE_ifstat = 12
    RULE_forstat = 13
    RULE_statelist = 14
    RULE_allocexpression = 15
    RULE_expression = 16
    RULE_numexpression = 17
    RULE_term = 18
    RULE_unaryexpr = 19
    RULE_factor = 20
    RULE_lvalue = 21
    RULE_types = 22

    ruleNames =  [ "start", "funclist", "funcdef", "paramlist", "statement", 
                   "vardecl", "atribstat", "funccall", "paramlistcall", 
                   "printstat", "readstat", "returnstat", "ifstat", "forstat", 
                   "statelist", "allocexpression", "expression", "numexpression", 
                   "term", "unaryexpr", "factor", "lvalue", "types" ]

    EOF = Token.EOF
    DEF=1
    INT=2
    FLOAT=3
    STRING=4
    BREAK=5
    PRINT=6
    READ=7
    RETURN=8
    IF=9
    ELSE=10
    FOR=11
    NEW=12
    OPEN_PAREN=13
    CLOSE_PAREN=14
    OPEN_BRACE=15
    CLOSE_BRACE=16
    OPEN_BRACK=17
    CLOSE_BRACK=18
    COMMA=19
    SEMI_COLON=20
    ASSIGN=21
    PLUS=22
    MINUS=23
    MULTIPLY=24
    DIVIDE=25
    MOD=26
    NULL=27
    LESS_THAN=28
    GREATHER_THAN=29
    LESS_THAN_OR_EQUAL=30
    GREATHER_THAN_OR_EQUAL=31
    EQUALS=32
    DIFFERENT=33
    IDENT=34
    INT_CONSTANT=35
    FLOAT_CONSTANT=36
    STRING_CONSTANT=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(LCCParser.StatementContext,0)


        def funclist(self):
            return self.getTypedRuleContext(LCCParser.FunclistContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = LCCParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LCCParser.INT, LCCParser.FLOAT, LCCParser.STRING, LCCParser.BREAK, LCCParser.PRINT, LCCParser.READ, LCCParser.RETURN, LCCParser.IF, LCCParser.FOR, LCCParser.OPEN_BRACE, LCCParser.SEMI_COLON, LCCParser.IDENT]:
                self.state = 46
                self.statement()
                pass
            elif token in [LCCParser.DEF]:
                self.state = 47
                self.funclist()
                pass
            elif token in [LCCParser.EOF]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunclistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LCCParser.FuncdefContext)
            else:
                return self.getTypedRuleContext(LCCParser.FuncdefContext,i)


        def funclist(self):
            return self.getTypedRuleContext(LCCParser.FunclistContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_funclist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunclist" ):
                listener.enterFunclist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunclist" ):
                listener.exitFunclist(self)




    def funclist(self):

        localctx = LCCParser.FunclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funclist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.funcdef()
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 51
                self.funcdef()
                pass

            elif la_ == 2:
                self.state = 52
                self.funclist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(LCCParser.DEF, 0)

        def IDENT(self):
            return self.getToken(LCCParser.IDENT, 0)

        def OPEN_PAREN(self):
            return self.getToken(LCCParser.OPEN_PAREN, 0)

        def paramlist(self):
            return self.getTypedRuleContext(LCCParser.ParamlistContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(LCCParser.CLOSE_PAREN, 0)

        def OPEN_BRACE(self):
            return self.getToken(LCCParser.OPEN_BRACE, 0)

        def statelist(self):
            return self.getTypedRuleContext(LCCParser.StatelistContext,0)


        def CLOSE_BRACE(self):
            return self.getToken(LCCParser.CLOSE_BRACE, 0)

        def getRuleIndex(self):
            return LCCParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = LCCParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(LCCParser.DEF)
            self.state = 56
            self.match(LCCParser.IDENT)
            self.state = 57
            self.match(LCCParser.OPEN_PAREN)
            self.state = 58
            self.paramlist()
            self.state = 59
            self.match(LCCParser.CLOSE_PAREN)
            self.state = 60
            self.match(LCCParser.OPEN_BRACE)
            self.state = 61
            self.statelist()
            self.state = 62
            self.match(LCCParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(LCCParser.TypesContext,0)


        def IDENT(self):
            return self.getToken(LCCParser.IDENT, 0)

        def COMMA(self):
            return self.getToken(LCCParser.COMMA, 0)

        def paramlist(self):
            return self.getTypedRuleContext(LCCParser.ParamlistContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_paramlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamlist" ):
                listener.enterParamlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamlist" ):
                listener.exitParamlist(self)




    def paramlist(self):

        localctx = LCCParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 64
                self.types()
                self.state = 65
                self.match(LCCParser.IDENT)
                self.state = 66
                self.match(LCCParser.COMMA)
                self.state = 67
                self.paramlist()

            elif la_ == 2:
                self.state = 69
                self.types()
                self.state = 70
                self.match(LCCParser.IDENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifstat(self):
            return self.getTypedRuleContext(LCCParser.IfstatContext,0)


        def forstat(self):
            return self.getTypedRuleContext(LCCParser.ForstatContext,0)


        def OPEN_BRACE(self):
            return self.getToken(LCCParser.OPEN_BRACE, 0)

        def statelist(self):
            return self.getTypedRuleContext(LCCParser.StatelistContext,0)


        def CLOSE_BRACE(self):
            return self.getToken(LCCParser.CLOSE_BRACE, 0)

        def BREAK(self):
            return self.getToken(LCCParser.BREAK, 0)

        def SEMI_COLON(self):
            return self.getToken(LCCParser.SEMI_COLON, 0)

        def vardecl(self):
            return self.getTypedRuleContext(LCCParser.VardeclContext,0)


        def atribstat(self):
            return self.getTypedRuleContext(LCCParser.AtribstatContext,0)


        def printstat(self):
            return self.getTypedRuleContext(LCCParser.PrintstatContext,0)


        def readstat(self):
            return self.getTypedRuleContext(LCCParser.ReadstatContext,0)


        def returnstat(self):
            return self.getTypedRuleContext(LCCParser.ReturnstatContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = LCCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LCCParser.INT, LCCParser.FLOAT, LCCParser.STRING, LCCParser.PRINT, LCCParser.READ, LCCParser.RETURN, LCCParser.IDENT]:
                self.state = 79
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LCCParser.INT, LCCParser.FLOAT, LCCParser.STRING]:
                    self.state = 74
                    self.vardecl()
                    pass
                elif token in [LCCParser.IDENT]:
                    self.state = 75
                    self.atribstat()
                    pass
                elif token in [LCCParser.PRINT]:
                    self.state = 76
                    self.printstat()
                    pass
                elif token in [LCCParser.READ]:
                    self.state = 77
                    self.readstat()
                    pass
                elif token in [LCCParser.RETURN]:
                    self.state = 78
                    self.returnstat()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 81
                self.match(LCCParser.SEMI_COLON)
                pass
            elif token in [LCCParser.IF]:
                self.state = 83
                self.ifstat()
                pass
            elif token in [LCCParser.FOR]:
                self.state = 84
                self.forstat()
                pass
            elif token in [LCCParser.OPEN_BRACE]:
                self.state = 85
                self.match(LCCParser.OPEN_BRACE)
                self.state = 86
                self.statelist()
                self.state = 87
                self.match(LCCParser.CLOSE_BRACE)
                pass
            elif token in [LCCParser.BREAK]:
                self.state = 89
                self.match(LCCParser.BREAK)
                self.state = 90
                self.match(LCCParser.SEMI_COLON)
                pass
            elif token in [LCCParser.SEMI_COLON]:
                self.state = 91
                self.match(LCCParser.SEMI_COLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(LCCParser.TypesContext,0)


        def IDENT(self):
            return self.getToken(LCCParser.IDENT, 0)

        def OPEN_BRACK(self, i:int=None):
            if i is None:
                return self.getTokens(LCCParser.OPEN_BRACK)
            else:
                return self.getToken(LCCParser.OPEN_BRACK, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(LCCParser.INT)
            else:
                return self.getToken(LCCParser.INT, i)

        def CLOSE_BRACK(self, i:int=None):
            if i is None:
                return self.getTokens(LCCParser.CLOSE_BRACK)
            else:
                return self.getToken(LCCParser.CLOSE_BRACK, i)

        def getRuleIndex(self):
            return LCCParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = LCCParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.types()
            self.state = 95
            self.match(LCCParser.IDENT)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LCCParser.OPEN_BRACK:
                self.state = 96
                self.match(LCCParser.OPEN_BRACK)
                self.state = 97
                self.match(LCCParser.INT)
                self.state = 98
                self.match(LCCParser.CLOSE_BRACK)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(LCCParser.LvalueContext,0)


        def ASSIGN(self):
            return self.getToken(LCCParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(LCCParser.ExpressionContext,0)


        def allocexpression(self):
            return self.getTypedRuleContext(LCCParser.AllocexpressionContext,0)


        def funccall(self):
            return self.getTypedRuleContext(LCCParser.FunccallContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_atribstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribstat" ):
                listener.enterAtribstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribstat" ):
                listener.exitAtribstat(self)




    def atribstat(self):

        localctx = LCCParser.AtribstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atribstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.lvalue()
            self.state = 105
            self.match(LCCParser.ASSIGN)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 106
                self.expression()
                pass

            elif la_ == 2:
                self.state = 107
                self.allocexpression()
                pass

            elif la_ == 3:
                self.state = 108
                self.funccall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunccallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LCCParser.IDENT, 0)

        def OPEN_PAREN(self):
            return self.getToken(LCCParser.OPEN_PAREN, 0)

        def paramlistcall(self):
            return self.getTypedRuleContext(LCCParser.ParamlistcallContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(LCCParser.CLOSE_PAREN, 0)

        def getRuleIndex(self):
            return LCCParser.RULE_funccall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunccall" ):
                listener.enterFunccall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunccall" ):
                listener.exitFunccall(self)




    def funccall(self):

        localctx = LCCParser.FunccallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funccall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(LCCParser.IDENT)
            self.state = 112
            self.match(LCCParser.OPEN_PAREN)
            self.state = 113
            self.paramlistcall()
            self.state = 114
            self.match(LCCParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistcallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LCCParser.IDENT, 0)

        def COMMA(self):
            return self.getToken(LCCParser.COMMA, 0)

        def paramlistcall(self):
            return self.getTypedRuleContext(LCCParser.ParamlistcallContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_paramlistcall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamlistcall" ):
                listener.enterParamlistcall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamlistcall" ):
                listener.exitParamlistcall(self)




    def paramlistcall(self):

        localctx = LCCParser.ParamlistcallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramlistcall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 116
                self.match(LCCParser.IDENT)
                self.state = 117
                self.match(LCCParser.COMMA)
                self.state = 118
                self.paramlistcall()

            elif la_ == 2:
                self.state = 119
                self.match(LCCParser.IDENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(LCCParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(LCCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_printstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintstat" ):
                listener.enterPrintstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintstat" ):
                listener.exitPrintstat(self)




    def printstat(self):

        localctx = LCCParser.PrintstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(LCCParser.PRINT)
            self.state = 123
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(LCCParser.READ, 0)

        def lvalue(self):
            return self.getTypedRuleContext(LCCParser.LvalueContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_readstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadstat" ):
                listener.enterReadstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadstat" ):
                listener.exitReadstat(self)




    def readstat(self):

        localctx = LCCParser.ReadstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_readstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(LCCParser.READ)
            self.state = 126
            self.lvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(LCCParser.RETURN, 0)

        def getRuleIndex(self):
            return LCCParser.RULE_returnstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstat" ):
                listener.enterReturnstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstat" ):
                listener.exitReturnstat(self)




    def returnstat(self):

        localctx = LCCParser.ReturnstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(LCCParser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LCCParser.IF, 0)

        def OPEN_PAREN(self):
            return self.getToken(LCCParser.OPEN_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LCCParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(LCCParser.CLOSE_PAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LCCParser.StatementContext)
            else:
                return self.getTypedRuleContext(LCCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(LCCParser.ELSE, 0)

        def getRuleIndex(self):
            return LCCParser.RULE_ifstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstat" ):
                listener.enterIfstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstat" ):
                listener.exitIfstat(self)




    def ifstat(self):

        localctx = LCCParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(LCCParser.IF)
            self.state = 131
            self.match(LCCParser.OPEN_PAREN)
            self.state = 132
            self.expression()
            self.state = 133
            self.match(LCCParser.CLOSE_PAREN)
            self.state = 134
            self.statement()
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 135
                self.match(LCCParser.ELSE)
                self.state = 136
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(LCCParser.FOR, 0)

        def OPEN_PAREN(self):
            return self.getToken(LCCParser.OPEN_PAREN, 0)

        def atribstat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LCCParser.AtribstatContext)
            else:
                return self.getTypedRuleContext(LCCParser.AtribstatContext,i)


        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(LCCParser.SEMI_COLON)
            else:
                return self.getToken(LCCParser.SEMI_COLON, i)

        def expression(self):
            return self.getTypedRuleContext(LCCParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(LCCParser.CLOSE_PAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(LCCParser.StatementContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_forstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForstat" ):
                listener.enterForstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForstat" ):
                listener.exitForstat(self)




    def forstat(self):

        localctx = LCCParser.ForstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_forstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(LCCParser.FOR)
            self.state = 140
            self.match(LCCParser.OPEN_PAREN)
            self.state = 141
            self.atribstat()
            self.state = 142
            self.match(LCCParser.SEMI_COLON)
            self.state = 143
            self.expression()
            self.state = 144
            self.match(LCCParser.SEMI_COLON)
            self.state = 145
            self.atribstat()
            self.state = 146
            self.match(LCCParser.CLOSE_PAREN)
            self.state = 147
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(LCCParser.StatementContext,0)


        def statelist(self):
            return self.getTypedRuleContext(LCCParser.StatelistContext,0)


        def getRuleIndex(self):
            return LCCParser.RULE_statelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatelist" ):
                listener.enterStatelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatelist" ):
                listener.exitStatelist(self)




    def statelist(self):

        localctx = LCCParser.StatelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statelist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.statement()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LCCParser.INT) | (1 << LCCParser.FLOAT) | (1 << LCCParser.STRING) | (1 << LCCParser.BREAK) | (1 << LCCParser.PRINT) | (1 << LCCParser.READ) | (1 << LCCParser.RETURN) | (1 << LCCParser.IF) | (1 << LCCParser.FOR) | (1 << LCCParser.OPEN_BRACE) | (1 << LCCParser.SEMI_COLON) | (1 << LCCParser.IDENT))) != 0):
                self.state = 150
                self.statelist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllocexpressionContext(ParserRuleContext):
